made minor changes to /test endpoint to double check heroku functionality

--- a/views/renderUsers.ejs
+++ b/views/renderUsers.ejs
@@ -15,7 +15,9 @@
         <strong>
             Stuff in Here:
             <br>
-            <%= users %>
+            <!--<%= users %> -->
+            <%= name %>
+            <%= email %>
         </strong>
     </div>
 </body>
