changes: altered development environment in config.js added pg-hstore package to modules. changed renderUnsers in attempt to get data down from heroku db

--- a/views/renderUsers.ejs
+++ b/views/renderUsers.ejs
@@ -15,8 +15,7 @@
         <strong>
             Stuff in Here:
             <br>
-            <%= name %>
-            <%= email %>
+            <%= users %>
         </strong>
     </div>
 </body>
