created registration2 route with updated styling, new form input section for user reg, added bcrypt dependency for future use in reg2 post route, created css and image directories in public folder, to be reconciled with existing css/image folders later on

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('partials/head.ejs') %>
+<%- include('partials/head1.ejs') %>
 <body>
     <h1 class="mb-4">DISPLAY SONGS</h1>
 </body>
