--- a/views/partials/head1.ejs
+++ b/views/partials/head1.ejs
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel = "stylesheet" type = "text/css" href = "/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     
     
 </head>
-<body>
-    
-</body>
-</html>
