--- a/views/renderUsers.ejs
+++ b/views/renderUsers.ejs
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style> 
-        body {background-color: #ffb8db;}
-        h1 {margin-top: 2rem; padding: 1rem; font-size:48px; text-transform:uppercase; letter-spacing:2px; text-align:center;}
-    </style>
-</head>
+<%- include('partials/head1.ejs') %>
 <body>
     <h1>GYM-TAN-LAUNDRY USERS TEST:</h1>
     <div>
