--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('partials/head.ejs') %>
-<body>
+<body id="Homepage">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Gym.Tan.Laundry.</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <h1 class="mb-4">DISPLAY SONGS</h1>
-</body>
-</html>
-
 
 
 
 <% songs.map(song => { %>
     <iframe src="https://open.spotify.com/embed/track/<%= song.id %>" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-<% })   %>
+<% })   %> 
 
-
+</body>
+</html>
 
