--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs') %>
+<%- include('partials/head1.ejs') %>
 <body id="Homepage">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Gym.Tan.Laundry.</a>
