--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,34 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/header.ejs') %>
 
-<%- include('partials/head.ejs') %>
-<body id="Homepage">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Gym.Tan.Laundry.</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/login.html">Login</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<!-- Flexbox page container -->
+<h1 id="intro">Here is a preview of your short gym playlist</h1>
+        <div id="songContainer" class="row py-1 px-3">
+           <!-- Players rendered here -->
+           <% songs.map(song => { %>
+            <iframe src="https://open.spotify.com/embed/track/<%= song.id %>" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <% })   %> 
+        </div>
+<div id="buttonDiv" class="mx-auto d-flex justify-content-center p-3">
+  <button id="startOver" class="btn btn-warning mr-2">
+    <img src="./Images/refresh.png" alt="" id="refreshIcon">Start over </button>
+  <button id="spotifyDashboard" class="btn btn-success">Login to save/edit with
+    <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+  </button>
+</div>
 
-<%- include('partials/head1.ejs') %>
-<body>
-
-    <h1 class="mb-4">DISPLAY SONGS</h1>
-
-
-
-<% songs.map(song => { %>
-    <iframe src="https://open.spotify.com/embed/track/<%= song.id %>" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-<% })   %> 
-
-</body>
-</html>
-
+<%- include('partials/footer.ejs') %>
