--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,10 +36,12 @@ div.main {
 
 
 .button{
+    background:  transparent;
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding:0px;
+    border:  2px solid transparent;
     }
 
 .button:hover{
