--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,14 +34,14 @@ div.main {
     background-size: cover;
 }
 
-.button{
+#modalBtnT, #modalBtnL, #modalBtn{
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding:0px;
     }
 
-.button:hover{
+#modalBtnT, #modalBtnL, #modalBtn:hover{
     -webkit-transform: scale(1.3);
         transform: scale(1.3);
 }
@@ -119,3 +119,91 @@ to {margin-left: -100%;width: 300%;} }
 to {margin-left: -100%;width: 300%;} }
 @keyframes slide-left { from {margin-left: 0%;width: 100%;}
 to {margin-left: -100%;width: 300%;} }
+
+body {
+    height: 100vh;
+    background-image: url('images/headphones_long_wire.jpg');
+    background-size: cover;
+}
+
+.simple-login-container{
+    width:300px;
+    max-width:100%;
+    margin:50px auto;
+}
+.simple-login-container h2{
+    text-align:center;
+    font-size:20px;
+}
+
+.simple-login-container .btn-login{
+    background-color:rgb(219, 170, 96);
+    color:#fff;
+}
+
+#profileContainer {
+    background-color: lightslategray;
+    width: 150px;
+}
+
+#profileImage {
+    height: 100px;
+}
+
+#profileName {
+    font-size: 18px;
+    text-align: center;
+}
+
+#spotifyUsername {
+    font-size: 12px;
+    text-align: center;
+}
+
+#footer {
+    height: 20px;
+    background-color: black;
+    font-size: 10px;
+    color: lightgray;
+    text-align: center;
+}
+
+.card-title {
+    font-size: 20px;
+    color: black;
+}
+
+.card-text {
+    font-size: 10px;
+    color: black;
+}
+
+#intro {
+    font-size: 20px;
+    text-align: center;
+    color: green;
+}
+
+html,body {
+    background-color: black;
+    font-family: 'Signika', sans-serif;
+}
+
+#refreshIcon {
+    height:25px;
+    margin-right: 10px;
+}
+
+#spotifyIcon {
+    height: 30px;
+}
+
+#songContainer {
+    justify-content: center;
+}
+
+#welcomeDashboard {
+    font-size: 20px;
+    text-align: center;
+    color: green;
+}
