--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,13 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home </a>
+              <a class="nav-link" href="/Home.html">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Dashboard</a>
+              <a class="nav-link" href="/login">Login</a>
             </li>
           </ul>
         </div>
