--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,36 @@
-<h1>Enter login information</h1>
-<form action="/login" method="post">
-    <label for="username">User name:</label>
-    <input type="text" id="username" name="username"><br><br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password"><br><br>
-    <input type="submit" value="Submit">
-  </form>
+<%- include('partials/header.ejs') %>
+
+<body id="Homepage">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Gym.Tan.Laundry.</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/public/Home.html">Home</a>
+          </li>
+             </ul>
+          </div>
+    </nav>
+
+    <div class="simple-login-container">
+      <h2>Login Form</h2>
+      <div class="row">
+          <div class="col-md-12 form-group">
+              <input type="text" class="form-control" placeholder="Username">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 form-group">
+              <input type="password" placeholder="Enter your Password" class="form-control">
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 form-group">
+              <input type="submit" class="btn btn-block btn-login" placeholder="Enter your Password" >
+          </div>
+      </div>
+      </div>
+  <%- include('partials/footer.ejs') %>
