made new route 'search-tracks-submit' to attempt to post new playlist up to spotify after user authentication

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -14,7 +14,6 @@
   <a href="/auth/spotify"><button id="spotifyDashboard" class="btn btn-success">Login to save/edit with
     <img src="./Images/spotify.png" alt="" id="spotifyIcon">
   </button></a>
-
   
   <script>
     // grabbed songs array
@@ -32,5 +31,12 @@
   });
   </script>
 </div>
+<!-- Adding a button to test out saving the songs selected to a users spotify profile as a new playlist-->
+<div class="text-center m-2 p-1">
+  <a href="/search-tracks-submit"><button id="spotifyDashboard" class="btn btn-success">Click to add playlist to your spotify account
+    <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+  </button></a>
+</div>
+
 
 <%- include('partials/footer.ejs') %>
