--- a/views/display.ejs
+++ b/views/display.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 
 <!-- Flexbox page container -->
-<h1 id="intro">Here is a preview of your short gym playlist</h1>
+<h1 id="intro">Here is a preview of your playlist!:</h1>
         <div id="songContainer" class="row py-1 px-3">
            <!-- Players rendered here -->
            <% songs.map(song => { %>
@@ -9,8 +9,10 @@
           <% })   %> 
         </div>
 <div id="buttonDiv" class="mx-auto d-flex justify-content-center p-3">
-  <button id="startOver" class="btn btn-warning mr-2">
-    <img src="./Images/refresh.png" alt="" id="refreshIcon">Start over </button>
+  <a href="/">
+    <button id="startOver" class="btn btn-warning mr-2">
+    <img src="/images/refresh.png" alt="" id="refreshIcon">Start over </button>
+  </a>
   <a href="/auth/spotify"><button id="spotifyDashboard" class="btn btn-success">Login to save/edit with
     <img src="./Images/spotify.png" alt="" id="spotifyIcon">
   </button></a>
