--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,25 +1,88 @@
-<a href="/login">Login</a>
-<a href="/registration">Sign Up</a>
+<%- include('partials/header.ejs') %>
+  <div class="center">
+    <button id="modalBtn" class="button">
+      <image src="images/G.png"></image>
 
-<div id="selectPlaylistDiv">
-    <label for="selectPlaylist">Select a playlist:</label>
-    <select id="selectPlaylist">
-        <option value="gym">Gym</option>
-        <option value="tan">Tan</option>
-        <option value="laundry">Laundry</option>
-    </select>
+    </button>
+    <div id="simpleModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <spam class="closeBtn">&times;</spam>
+          <h4>Select size of Playlist:</h4>
+        </div>
+        <div class="modal-body">
+        <form method="POST" action="/modal-input">
+          <input type="radio" id="smallList" name="songList" value="5">
+          <input type="hidden" name="playListType" value="gym">
+          <label for="smallList">Small(5 songs)</label><br>
+          <input type="radio" id="mediumList" name="songList" value="10">
+          <label for="mediumList">Medium(10 songs)</label><br>
+          <input type="radio" id="largeList" name="songList" value="15">
+          <label for="largeList">Large(15 songs)</label><br>
+          <button type="submit" id="playlistSubmitButton">Submit</button>
+        </form>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <button id="modalBtnT" class="button">
+      <image src="images/t.png"></image>
+    
+    </button>
+    
+    <div id="simpleModalT" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <spam class="closeBtn">&times;</spam>
+          <h4>Select size of Playlist:</h4>
+        </div>
+        <div class="modal-body">
+          <form method="POST" action="/modal-input">
+          <input type="radio" id="smallListT" name="songListT" value="5">
+          <input type="hidden" name="playListType" value="tan">
+          <label for="smallList">Small(5 songs)</label><br>
+          <input type="radio" id="mediumListT" name="songListT" value="10">
+          <label for="mediumList">Medium(10 songs)</label><br>
+          <input type="radio" id="largeListT" name="songListT" value="15">
+          <label for="largeList">Large(15 songs)</label><br>
+        </form>
+          <button type="submit" id="playlistSubmitButtonT">Submit</button>
 
-    <p>Select size of Playlist:</p>
-    <input type="radio" id="smallList" name="songList" value="small">
-    <label for="smallList">Small(5 songs)</label><br>
-    <input type="radio" id="mediumList" name="songList" value="medium">
-    <label for="mediumList">Medium(10 songs)</label><br>
-    <input type="radio" id="largeList" name="songList" value="large">
-    <label for="largeList">Large(15 songs)</label>
-
-    <button id="playlistSubmitButton">Submit</button>
-   
+        </div>
+      </div>
+    </div>
+    <br>
+    <button id="modalBtnL" class="button">
+      <image src="images/L.png"></image>
+    </button>
+    <div id="simpleModalL" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4>Select size of Playlist:</h4>
+        </div>
+        <div class="modal-body">
+        <form method="POST" action="/modal-input"></form>
+          <input type="radio" id="smallListL" name="songListL" value="5">
+          <input type="hidden" name="playListType" value="laundry">
+          <label for="smallList">Small(5 songs)</label><br>
+          <input type="radio" id="mediumListL" name="songListL" value="10">
+          <label for="mediumList">Medium(10 songs)</label><br>
+          <input type="radio" id="largeListL" name="songListL" value="15">
+          <label for="largeList">Large(15 songs)</label><br>
+        </form>
+          <button type="submit" id="playlistSubmitButtonL">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container center">
+   <p id="homeIntroduction" class="text-center">We're here to make creating your own playlists easier. 
+       <br>
+       Select a one of our categories above and we will generate a unique playlist for you! </p>
 </div>
 
-<script src="index.js"></script>
-
+<!-- Script for Crystal's Modals -->
+  <script src="/style.js"></script>
+  <script src="/index.js"></script>
+<%- include('partials/footer.ejs') %>
