--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,7 @@
 <%- include('partials/header.ejs') %>
 
-<body id="Homepage">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Gym.Tan.Laundry.</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/public/Home.html">Home</a>
-          </li>
-             </ul>
-          </div>
-    </nav>
-
     <div class="simple-login-container">
-      <h2>Login Form</h2>
+      <h2 class="registerLabels">Login Form</h2>
       <div class="row">
           <div class="col-md-12 form-group">
               <input type="text" class="form-control" placeholder="Username">
@@ -29,7 +14,7 @@
       </div>
       <div class="row">
           <div class="col-md-12 form-group">
-              <input type="submit" class="btn btn-block btn-login" placeholder="Enter your Password" >
+              <input type="submit" class="btn btn-block btn-success" placeholder="Enter your Password" >
           </div>
       </div>
       </div>
