--- a/views/display.ejs
+++ b/views/display.ejs
@@ -9,28 +9,36 @@
           <% })   %> 
         </div>
 <div id="buttonDiv" class="mx-auto d-flex justify-content-center p-3">
+ 
   <button id="startOver" class="btn btn-warning mr-2">
     <img src="./Images/refresh.png" alt="" id="refreshIcon">Start over </button>
   <a href="/auth/spotify"><button id="spotifyDashboard" class="btn btn-success">Login to save/edit with
     <img src="./Images/spotify.png" alt="" id="spotifyIcon">
   </button></a>
 
-  
-  <script>
-    // grabbed songs array
-   var songsList = "<%= songs %>"
-   // Attempting to grab the tracks-id or playlist-id that's being injected into the iframe src above.
-    // afterwhich hopefully storing that value in a variable, then we can push that ID up to our own database
-  var songsFrame = document.getElementsByTagName('iframe');
-  // am able to get object syntax only so far
-  var tracksID = songsFrame.item(0);
-  document.getElementById('spotifyDashboard').addEventListener('click', function login_save() {
-
-      console.log('login/save button was clicked');
-      console.log(songsList);
-      
-  });
-  </script>
 </div>
+
+<div id="button2">
+  <a href="/push-to-playlist"><button id="postToSpotify" class="center btn btn-success">Post your playlist to spotify
+    <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+  </button>
+  </a>
+</div>
+
+<script>
+  // grabbed songs array
+ var songsList = "<%= songs %>"
+ // Attempting to grab the tracks-id or playlist-id that's being injected into the iframe src above.
+  // afterwhich hopefully storing that value in a variable, then we can push that ID up to our own database
+var songsFrame = document.getElementsByTagName('iframe');
+// am able to get object syntax only so far
+var tracksID = songsFrame.item(0);
+document.getElementById('spotifyDashboard').addEventListener('click', function login_save() {
+
+    console.log('login/save button was clicked');
+    console.log(songsList);
+    
+});
+</script>
 
 <%- include('partials/footer.ejs') %>
