Got working version on new branch.. create-playlist

--- a/views/display.ejs
+++ b/views/display.ejs
@@ -24,6 +24,13 @@
   <% } %>
   
 </div>
+
+<div id="newPlaylistButton">
+  <a href="/create-playlist"><button id="createPlaylist" class="btn btn-success">Create new playlist
+    <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+  </button>
+</a>
+</div>
   
   <script>
     // grabbed songs array
