--- a/views/display.ejs
+++ b/views/display.ejs
@@ -17,6 +17,9 @@
     <a href="/logout"><button id="spotifyDashboard" class="btn btn-success">Logout
       <img src="./Images/spotify.png" alt="" id="spotifyIcon">
     </button></a>
+    <a href="/push-to-playlist"><button id="spotifyDashboard" class="btn btn-success">Push playlist to spotify
+      <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+    </button></a>
   <% } else { %>
     <a href="/auth/spotify"><button id="spotifyDashboard" class="btn btn-success">Login to save/edit with
       <img src="./Images/spotify.png" alt="" id="spotifyIcon">
