made serveral changes to remove spurious routes/code/console logs, corrected error on home.ejs with lowercase T

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
     <br>
     <br>
     <button id="modalBtnT" class="button">
-      <image src="images/t.png"></image>
+      <image src="images/T.png"></image>
     
     </button>
     
