--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,11 +22,11 @@
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <!-- <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
