--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,12 +16,9 @@
 </head>
 
 <body id="Homepage">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Gym-Tan-Laundry</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  </nav>
     <!-- <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
