Changed form values on home.ejs to capital gym/tan/laundry in order to dynamically create playlist names in server-main. created dynamic playlist names, edited CSS to put footer at bottom/absolute, edited the algorithm-functions to provide more diverse song returns

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,7 +136,7 @@
     font-size: 10px;
     color: lightgray;
     text-align: center;
-    position:sticky;
+    position:absolute;
     bottom:0;
     width:100%;
 }
