--- a/views/display.ejs
+++ b/views/display.ejs
@@ -15,14 +15,14 @@
   </a>
   <% if(loggedIn) { %>
     <a href="/logout"><button id="spotifyDashboard" class="btn btn-success">Logout
-      <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+      <img src="/images/spotify.png" alt="" id="spotifyIcon">
     </button></a>
     <a href="/push-to-playlist"><button id="spotifyDashboard" class="btn btn-success">Create playlist with
-      <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+      <img src="/images/spotify.png" alt="" id="spotifyIcon">
     </button></a>
   <% } else { %>
     <a href="/auth/spotify"><button id="spotifyDashboard2" class="btn btn-success mx-2">Login to save with
-      <img src="./Images/spotify.png" alt="" id="spotifyIcon">
+      <img src="/images/spotify.png" alt="" id="spotifyIcon">
     </button></a>
   <% } %>
   
