--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
         <div class="modal-body">
         <form method="POST" action="/modal-input">
           <input type="radio" id="smallList" name="songList" value="5" required>
-          <input type="hidden" name="playListType" value="gym">
+          <input type="hidden" name="playListType" value="GYM">
           <label for="smallList">Small(5 songs)</label><br>
           <input type="radio" id="mediumList" name="songList" value="10" required>
           <label for="mediumList">Medium(10 songs)</label><br>
@@ -40,7 +40,7 @@
         <div class="modal-body">
           <form method="POST" action="/modal-input">
           <input type="radio" id="smallListT" name="songListT" value="5" required>
-          <input type="hidden" name="playListType" value="tan">
+          <input type="hidden" name="playListType" value="TAN">
           <label for="smallList">Small(5 songs)</label><br>
           <input type="radio" id="mediumListT" name="songListT" value="10" required>
           <label for="mediumList">Medium(10 songs)</label><br>
@@ -64,7 +64,7 @@
         <div class="modal-body">
         <form method="POST" action="/modal-input"></form>
           <input type="radio" id="smallListL" name="songListL" value="5" required>
-          <input type="hidden" name="playListType" value="laundry">
+          <input type="hidden" name="playListType" value="LAUNDRY">
           <label for="smallList">Small(5 songs)</label><br>
           <input type="radio" id="mediumListL" name="songListL" value="10" required>
           <label for="mediumList">Medium(10 songs)</label><br>
