--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
   <div class="container center">
    <p id="homeIntroduction" class="text-center">We're here to make creating your own playlists easier. 
        <br>
-       Select a one of our categories above and we will generate a unique playlist for you! </p>
+       Select one of our categories above and we will generate a unique playlist for you! </p>
 </div>
 
 <!-- Script for Crystal's Modals -->
