--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,22 @@
 
 .center{
-    margin: auto;
-    padding: 30px;
+    /* margin: 0 auto; */
+    display:flex;
+    flex-direction: row;
+    /* justify-content: center;
+    align-items: center; */
+}
+
+#gtlContainer {
     display:flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    margin-top: 25vh;
+}
+
+#gymImg:hover {
+    border: green;
 }
 
 #Homepage {
@@ -16,17 +28,10 @@
     font-family: 'Signika', sans-serif;
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-    #homeIntroduction {
-        margin-bottom: 50vh;
-    }
-}
-
-
 #homeIntroduction {
     color:white;
-    font-size: 15px;
+    font-size: 18px;
+    margin-top: 50px;
 }
 
 .button{
@@ -164,7 +169,10 @@
     color: #1DB954;
 }
 
-
+.registerLabels {
+    font-size: 15px;
+    color: #1DB954;
+}
 
 @keyframes modalopen{
     from{opacity: 0}
@@ -188,7 +196,3 @@ to {margin-left: -100%;width: 300%;} }
 @keyframes slide-left { from {margin-left: 0%;width: 100%;}
 to {margin-left: -100%;width: 300%;} }
 
-.registerLabels {
-    font-size: 15px;
-    color: #1DB954;
-}
